# VaultOne

./: .gitattributes  .gitignore  BLUEPRINT.md  CHANGELOG.ja-JP.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CONTEXT.md  LICENSE  README.ja-JP.md  README.md  README.zh-CN.md  biome.json  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: implementation-progress.md
docs/adr/: 0001-collect-from-session-logs.md  0002-device-identity.md
docs/agents/: domain.md  issue-tracker.md
docs/images/: README.md
docs/research/: claude-code-session-fields.md  reference-projects.md
scripts/: extract-changelog.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  db_schema.sql  error.rs  ingest.rs  lib.rs  main.rs  model.rs  pricing.rs  providers.rs  sync.rs  window_geom.rs
src/app/: App.tsx  close-requested-dialog.tsx  providers.tsx
src/app/shell/: command-bar.tsx  data-freshness.tsx  lightweight-geometry.ts  shell.tsx  title-bar.tsx  update-card.tsx  use-lightweight-tuck.ts  use-update-check.ts  use-window-mode.ts
src/app/store/: api.ts  hooks.ts  store.ts
src/app/store/slices/: filterSlice.ts  uiSlice.ts  updateSlice.ts  viewSlice.ts
src/components/: empty-state.tsx  query-state.tsx  theme-toggle.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx  sheet.tsx  table.tsx  tabs.tsx  tooltip.tsx
src/features/pricing/: api.ts
src/features/pricing/components/: entry-editor-dialog.tsx  pricing-view.tsx
src/features/settings/: api.ts
src/features/settings/components/: conflict-resolver.tsx  device-list.tsx  general-card.tsx  settings-view.tsx
src/features/usage/: api.ts
src/hooks/: use-freshness.ts  use-polling-interval.ts  use-skin.ts
src/i18n/: LanguageSync.tsx  index.ts  languages.ts
src/lib/: format.ts
src/locales/: en.json  ja.json  zh.json
src/types/: preferences.ts
(+18 files in other folders)
