[package]
name = "vaultone"
version = "1.0.0"
description = "VaultOne — local LLM usage dashboard with optional GitHub-repo multi-device sync."
authors = ["VaultOne"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-specta v2 (ADR-0008): pin exact RC — specta v2 not yet stable.
specta = { version = "=2.0.0-rc.25", features = ["derive", "function"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2"

# Local store (ADR-0004): rusqlite with bundled SQLite so no system SQLite needed.
rusqlite = { version = "0.31", features = ["bundled"] }
# Cost precision (ADR-0004: Decimal stored as TEXT).
rust_decimal = { version = "1", features = ["serde"] }
# Timestamps as ISO8601 UTC (ADR-0003 / 0004).
chrono = { version = "0.4", features = ["serde"] }
# Device identity (ADR-0002) + record ids.
rand = "0.8"
# ~/.config/vaultone home-relative paths (ADR-0004).
dirs = "5"
# Session-log discovery (ADR-0001): walk ~/.claude/projects/**/*.jsonl.
walkdir = "2"
# LiteLLM upstream pricing fetch (ADR-0007). ureq = blocking + rustls (pure Rust).
ureq = "2"
# GitHub-repo sync over libgit2 (ADR-0005). HTTPS-only (PAT); no SSH feature to
# keep the dependency surface small. Windows TLS uses Schannel via libgit2.
git2 = { version = "0.19", default-features = false, features = ["https"] }

[dev-dependencies]
# Test-only temp dirs for db / config / ingest / providers tests (S1).
tempfile = "3"
